--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Heinrich Reimer
+permalink: /
 ---
 
 <div class="cover" id="home" style="background-image: url('{{ site.data.cover.image }}')">
