--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ permalink: /
 
 <div class="cover" id="home" style="background-image: url('{{ site.data.cover.image }}')">
     <div class="cover-inner">
-        <img src="{{ site.data.cover.image }}">
+        <img src="{{ site.data.cover.logo }}">
         <h1 class="mdl-typography--display-4">{{ site.data.cover.title }}</h1>
         <p class="mdl-typography--headline">{{ site.data.cover.subtitle }}</p>
         <p><a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
