--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ permalink: /
         <div class="mdl-card__media">
             <img src="{{ app.image }}">
         </div>
-        <div class="mdl-card__title"><h5 class="mdl-card__title-text">{{ app.name }}</h5></div>
+        <div class="mdl-card__title"><h5 class="mdl-card__title-text">{{ app.title }}</h5></div>
         <div class="mdl-card__supporting-text">{{ app.description }}</div>
         <div class="mdl-card__actions mdl-card--border">
             <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
