Fixed sort order

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ permalink: /
 
 <div class="mdl-grid apps" id="apps">
     <h2 class="mdl-cell mdl-cell--12-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">{{ site.data.apps.title }}</h2>
-    {% for app in site.apps %}
+    {% for app in site.apps reversed %}
     <div class="mdl-cell mdl-cell--4-col mdl-card mdl-shadow--2dp">
         <div class="mdl-card__media">
             <img src="{{ app.image }}">
@@ -61,7 +61,7 @@ permalink: /
 <div class="mdl-grid libraries" id="libraries">
     <h2 class="mdl-cell mdl-cell--12-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">{{ site.data.libraries.title
         }}</h2>
-    {% for library in site.libraries %}
+    {% for library in site.libraries reversed %}
     <div class="mdl-cell mdl-cell--4-col mdl-card mdl-shadow--2dp">
         <div class="mdl-card__media">
             <img src="{{ library.image }}">
