--- a/index.html
+++ b/index.html
@@ -34,19 +34,21 @@ permalink: /
     <h2>{{ site.data.apps.title }}</h2>
 
     {% for app in site.apps reversed %}
-    <paper-card image="{{ app.image }}">
-        <div class="card-content">
-            <h5>{{ app.title }}</h5>
-            <p class="description">{{ app.description }}</p>
-        </div>
-        <div class="card-actions">
-            <div class="horizontal justified">
-                <a href="{{ app.link }}" target="_blank">
-                    <paper-button>{{ site.data.apps.button }}</paper-button>
-                </a>
+    <paper-material>
+        <paper-card image="{{ app.image }}">
+            <div class="card-content">
+                <h5>{{ app.title }}</h5>
+                <p class="description">{{ app.description }}</p>
             </div>
-        </div>
-    </paper-card>
+            <div class="card-actions">
+                <div class="horizontal justified">
+                    <a href="{{ app.link }}" target="_blank">
+                        <paper-button>{{ site.data.apps.button }}</paper-button>
+                    </a>
+                </div>
+            </div>
+        </paper-card>
+    </paper-material>
     {% endfor %}
 
     <div class="mdl-cell mdl-cell--4-col app-cell cta-cell">
@@ -70,19 +72,21 @@ permalink: /
     <h2>{{ site.data.libraries.title }}</h2>
 
     {% for library in site.libraries reversed %}
-    <paper-card image="{{ app.image }}">
-        <div class="card-content">
-            <h5>{{ library.title }}</h5>
-            <p class="description">{{ library.description }}</p>
-        </div>
-        <div class="card-actions">
-            <div class="horizontal justified">
-                <a href="{{ library.link }}" target="_blank">
-                    <paper-button>{{ site.data.libraries.button }}</paper-button>
-                </a>
+    <paper-material>
+        <paper-card image="{{ app.image }}">
+            <div class="card-content">
+                <h5>{{ library.title }}</h5>
+                <p class="description">{{ library.description }}</p>
             </div>
-        </div>
-    </paper-card>
+            <div class="card-actions">
+                <div class="horizontal justified">
+                    <a href="{{ library.link }}" target="_blank">
+                        <paper-button>{{ site.data.libraries.button }}</paper-button>
+                    </a>
+                </div>
+            </div>
+        </paper-card>
+    </paper-material>
     {% endfor %}
 
     <div class="mdl-cell mdl-cell--4-col app-cell cta-cell">
