--- a/index.html
+++ b/index.html
@@ -7,19 +7,22 @@ permalink: /
 <div class="cover" id="home" style="background-image: url('{{ site.data.cover.image }}')">
     <div class="cover-inner">
         <img src="{{ site.data.cover.logo }}">
-        <h1 class="mdl-typography--display-4">{{ site.data.cover.title }}</h1>
-        <p class="mdl-typography--headline">{{ site.data.cover.subtitle }}</p>
-        <p><a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
-              href="{{ site.data.cover.button.link }}">{{ site.data.cover.button.title }}</a></p>
-        <a class="mdl-button mdl-js-button mdl-button--icon" href="#philosophy">
-            <i class="material-icons">keyboard_arrow_down</i>
+        <h1>{{ site.data.cover.title }}</h1>
+        <h4>{{ site.data.cover.subtitle }}</h4>
+        <a href="{{ site.data.cover.button.link }}" tabindex="-1">
+            <paper-button raised>{{ navigation.title }}</paper-button>
+            {{ site.data.cover.button.title }}
         </a>
     </div>
+    <a href="#services">
+        <paper-icon-button-light icon="keyboard_arrow_down"></paper-icon-button-light>
+    </a>
 </div>
 
 <div class="app-grid services" id="services">
     {% for service in site.services %}
-        <div class="mdl-cell mdl-cell--4-col philosophy-cell">
+    <div class="mdl-cell mdl-cell--4-col">
+        <iron-icon icon="{{ service.icon }}"></iron-icon>
             <h2><i class="material-icons">{{ service.icon }}</i></h2>
             <h3>{{ service.title }}</h3>
             <p class="mdl-typography--subhead">{{ service.description }}</p>
