--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@ permalink: /
         <h1>{{ site.data.cover.title }}</h1>
         <h4>{{ site.data.cover.subtitle }}</h4>
         <a href="{{ site.data.cover.button.link }}" tabindex="-1">
-            <paper-button raised>{{ navigation.title }}</paper-button>
-            {{ site.data.cover.button.title }}
+            <paper-button raised>{{ site.data.cover.button.title }}</paper-button>
         </a>
     </div>
     <a href="#services">
