--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ permalink: /
         </a>
     </div>
     <a href="#services">
-        <paper-icon-button icon="keyboard_arrow_down"></paper-icon-button>
+        <paper-icon-button icon="hardware:keyboard-arrow-down"></paper-icon-button>
     </a>
 </div>
 
