--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ permalink: /
 
 <hr>
 
-<iron-grid class="libraries" id="libraries">
+<iron-grid class="libraries" id="libraries" log>
 
     <h2 class="s12">{{ site.data.libraries.title }}</h2>
 
