--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ permalink: /
 
 <iron-grid class="services" id="services">
     {% for service in site.services %}
-    <section class="s12 m6 l4 xl4">
+    <section class="xs12 s6 m4">
         <iron-icon icon="{{ service.icon }}"></iron-icon>
         <h3>{{ service.title }}</h3>
         <h6>{{ service.description }}</h6>
@@ -32,10 +32,10 @@ permalink: /
 
 <iron-grid class="apps" id="apps">
 
-    <h2 class="s12">{{ site.data.apps.title }}</h2>
+    <h2 class="m12">{{ site.data.apps.title }}</h2>
 
     {% for app in site.apps reversed %}
-    <paper-card class="s12 m6 l4 xl4" image="{{ app.image }}" elevation="2">
+    <paper-card class="xs12 s6 m4" image="{{ app.image }}" elevation="2">
         <div class="card-content">
             <h5>{{ app.title }}</h5>
             <p class="description">{{ app.description }}</p>
@@ -50,7 +50,7 @@ permalink: /
     </paper-card>
     {% endfor %}
 
-    <div class="s12 m6 l4 xl4 cta-cell">
+    <div class="xs12 s6 m4 cta-cell">
         <h3>{{ site.data.apps.cta.title }}</h3>
         <p>{{ site.data.apps.cta.description }}</p>
         <a href="{{ site.data.apps.cta.link }}" tabindex="-1">
@@ -64,10 +64,10 @@ permalink: /
 
 <iron-grid class="libraries" id="libraries" log>
 
-    <h2 class="s12">{{ site.data.libraries.title }}</h2>
+    <h2 class="m12">{{ site.data.libraries.title }}</h2>
 
     {% for library in site.libraries reversed %}
-    <paper-card class="s12 m6 l4 xl4" image="{{ library.image }}" elevation="2">
+    <paper-card class="xs12 s6 m4" image="{{ library.image }}" elevation="2">
         <div class="card-content">
             <h5>{{ library.title }}</h5>
             <p class="description">{{ library.description }}</p>
@@ -82,7 +82,7 @@ permalink: /
     </paper-card>
     {% endfor %}
 
-    <div class="s12 m6 l4 xl4 cta-cell">
+    <div class="xs12 s6 m4 cta-cell">
         <h3>{{ site.data.libraries.cta.title }}</h3>
         <p>{{ site.data.libraries.cta.description }}</p>
         <a href="{{ site.data.libraries.cta.link }}" tabindex="-1">
