--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ permalink: /
     <div class="cover-inner">
         <img src="{{ site.data.cover.logo }}">
         <h1>{{ site.data.cover.title }}</h1>
-        <h4>{{ site.data.cover.subtitle }}</h4>
+        <p>{{ site.data.cover.subtitle }}</p>
         <a href="{{ site.data.cover.button.link }}" tabindex="-1">
             <paper-button raised filled>{{ site.data.cover.button.title }}</paper-button>
         </a>
