--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ permalink: /
     <div class="xs12 s6 m4 cta-cell">
         <h3>{{ site.data.apps.cta.title }}</h3>
         <p>{{ site.data.apps.cta.description }}</p>
-        <a href="{{ site.data.apps.cta.link }}" tabindex="-1">
+        <a href="{{ site.data.apps.cta.link }}" tabindex="-1" target="_blank">
             <paper-button raised filled>{{ site.data.apps.cta.button }}</paper-button>
         </a>
     </div>
@@ -85,7 +85,7 @@ permalink: /
     <div class="xs12 s6 m4 cta-cell">
         <h3>{{ site.data.libraries.cta.title }}</h3>
         <p>{{ site.data.libraries.cta.description }}</p>
-        <a href="{{ site.data.libraries.cta.link }}" tabindex="-1">
+        <a href="{{ site.data.libraries.cta.link }}" tabindex="-1" target="_blank">
             <paper-button raised filled>{{ site.data.libraries.cta.button }}</paper-button>
         </a>
     </div>
