--- a/index.html
+++ b/index.html
@@ -30,96 +30,12 @@ permalink: /
 
 <hr>
 
-<iron-grid class="apps" id="apps">
-
-    <h2 class="m12">{{ site.data.apps.title }}</h2>
-
-    {% for app in site.apps reversed %}
-    <paper-card class="xs12 s6 m4" image="{{ app.image }}" elevation="2">
-        <div class="card-content">
-            <h5>{{ app.title }}</h5>
-            <p class="description">{{ app.description }}</p>
-        </div>
-        <div class="card-actions">
-            <div class="horizontal justified">
-                <a href="{{ app.link }}" target="_blank" tabindex="-1">
-                    <paper-button>{{ site.data.apps.button }}</paper-button>
-                </a>
-            </div>
-        </div>
-    </paper-card>
-    {% endfor %}
-
-    <div class="xs12 s6 m4 cta-cell">
-        <h3>{{ site.data.apps.cta.title }}</h3>
-        <p>{{ site.data.apps.cta.description }}</p>
-        <a href="{{ site.data.apps.cta.link }}" tabindex="-1" target="_blank">
-            <paper-button raised filled>{{ site.data.apps.cta.button }}</paper-button>
-        </a>
-    </div>
-
-</iron-grid>
+{{ include collection.html info=site.data.apps items=site.apps }}
 
 <hr>
 
-<iron-grid class="websites" id="websites">
-
-    <h2 class="m12">{{ site.data.websites.title }}</h2>
-
-    {% for website in site.websites reversed %}
-    <paper-card class="xs12 s6 m4" image="{{ website.image }}" elevation="2">
-        <div class="card-content">
-            <h5>{{ website.title }}</h5>
-            <p class="description">{{ website.description }}</p>
-        </div>
-        <div class="card-actions">
-            <div class="horizontal justified">
-                <a href="{{ website.link }}" target="_blank" tabindex="-1">
-                    <paper-button>{{ site.data.websites.button }}</paper-button>
-                </a>
-            </div>
-        </div>
-    </paper-card>
-    {% endfor %}
-
-    <div class="xs12 s6 m4 cta-cell">
-        <h3>{{ site.data.websites.cta.title }}</h3>
-        <p>{{ site.data.websites.cta.description }}</p>
-        <a href="{{ site.data.websites.cta.link }}" tabindex="-1" target="_blank">
-            <paper-button raised filled>{{ site.data.websites.cta.button }}</paper-button>
-        </a>
-    </div>
-
-</iron-grid>
+{{ include collection.html info=site.data.websites items=site.websites }}
 
 <hr>
 
-<iron-grid class="libraries" id="libraries">
-
-    <h2 class="m12">{{ site.data.libraries.title }}</h2>
-
-    {% for library in site.libraries reversed %}
-    <paper-card class="xs12 s6 m4" image="{{ library.image }}" elevation="2">
-        <div class="card-content">
-            <h5>{{ library.title }}</h5>
-            <p class="description">{{ library.description }}</p>
-        </div>
-        <div class="card-actions">
-            <div class="horizontal justified">
-                <a href="{{ library.link }}" target="_blank" tabindex="-1">
-                    <paper-button>{{ site.data.libraries.button }}</paper-button>
-                </a>
-            </div>
-        </div>
-    </paper-card>
-    {% endfor %}
-
-    <div class="xs12 s6 m4 cta-cell">
-        <h3>{{ site.data.libraries.cta.title }}</h3>
-        <p>{{ site.data.libraries.cta.description }}</p>
-        <a href="{{ site.data.libraries.cta.link }}" tabindex="-1" target="_blank">
-            <paper-button raised filled>{{ site.data.libraries.cta.button }}</paper-button>
-        </a>
-    </div>
-
-</iron-grid>
+{{ include collection.html info=site.data.libraries items=site.libraries }}
