--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ permalink: /
     {% endfor %}
 </iron-grid>
 
-{% for collection in site.collections reversed %}
 <hr>
+
 <iron-grid class="{{ collection.info.id }}" id="{{ collection.info.id }}">
 
     <h2 class="m12">{{ collection.info.title }}</h2>
@@ -59,4 +59,67 @@ permalink: /
     </div>
 
 </iron-grid>
-{% endfor %}
+
+<hr>
+
+<iron-grid class="{{ collection.info.id }}" id="{{ collection.info.id }}">
+
+    <h2 class="m12">{{ collection.info.title }}</h2>
+
+    {% for item in {{ collection.items }} reversed %}
+    <paper-card class="xs12 s6 m4" image="{{ item.image }}" elevation="2">
+        <div class="card-content">
+            <h5>{{ item.title }}</h5>
+            <p class="description">{{ item.description }}</p>
+        </div>
+        <div class="card-actions">
+            <div class="horizontal justified">
+                <a href="{{ item.link }}" target="_blank" tabindex="-1">
+                    <paper-button>{{ collection.info.button }}</paper-button>
+                </a>
+            </div>
+        </div>
+    </paper-card>
+    {% endfor %}
+
+    <div class="xs12 s6 m4 cta-cell">
+        <h3>{{ collection.info.cta.title }}</h3>
+        <p>{{ collection.info.cta.description }}</p>
+        <a href="{{ collection.info.cta.link }}" tabindex="-1" target="_blank">
+            <paper-button raised filled>{{ collection.info.cta.button }}</paper-button>
+        </a>
+    </div>
+
+</iron-grid>
+
+<hr>
+
+<iron-grid class="libraries" id="libraries">
+
+    <h2 class="m12">{{ site.data.libraries.title }}</h2>
+
+    {% for item in {{ site.libraries.items }} reversed %}
+    <paper-card class="xs12 s6 m4" image="{{ item.image }}" elevation="2">
+        <div class="card-content">
+            <h5>{{ item.title }}</h5>
+            <p class="description">{{ item.description }}</p>
+        </div>
+        <div class="card-actions">
+            <div class="horizontal justified">
+                <a href="{{ item.link }}" target="_blank" tabindex="-1">
+                    <paper-button>{{ site.data.libraries.button }}</paper-button>
+                </a>
+            </div>
+        </div>
+    </paper-card>
+    {% endfor %}
+
+    <div class="xs12 s6 m4 cta-cell">
+        <h3>{{ site.data.libraries.cta.title }}</h3>
+        <p>{{ site.data.libraries.cta.description }}</p>
+        <a href="{{ site.data.libraries.cta.link }}" tabindex="-1" target="_blank">
+            <paper-button raised filled>{{ site.data.libraries.cta.button }}</paper-button>
+        </a>
+    </div>
+
+</iron-grid>
