--- a/index.html
+++ b/index.html
@@ -4,19 +4,7 @@ title: Heinrich Reimer
 permalink: /
 ---
 
-<div class="cover" id="home" style="background-image: url('{{ site.data.cover.image }}')">
-    <div class="cover-inner">
-        <img src="{{ site.data.cover.logo }}">
-        <h1>{{ site.data.cover.title }}</h1>
-        <p>{{ site.data.cover.subtitle }}</p>
-        <a href="{{ site.data.cover.button.link }}" tabindex="-1">
-            <paper-button raised filled>{{ site.data.cover.button.title }}</paper-button>
-        </a>
-    </div>
-    <a href="#services">
-        <paper-icon-button icon="hardware:keyboard-arrow-down"></paper-icon-button>
-    </a>
-</div>
+{% include cover.html %}
 
 <iron-grid class="services" id="services">
     {% for service in site.services %}
@@ -38,32 +26,4 @@ permalink: /
 
 <hr>
 
-<iron-grid class="libraries" id="libraries">
-
-    <h2 class="m12">{{ site.data.libraries.title }}</h2>
-
-    {% for item in site.libraries reversed %}
-    <paper-card class="xs12 s6 m4" image="{{ item.image }}" elevation="2">
-        <div class="card-content">
-            <h5>{{ item.title }}</h5>
-            <p class="description">{{ item.description }}</p>
-        </div>
-        <div class="card-actions">
-            <div class="horizontal justified">
-                <a href="{{ item.link }}" target="_blank" tabindex="-1">
-                    <paper-button>{{ site.data.libraries.button }}</paper-button>
-                </a>
-            </div>
-        </div>
-    </paper-card>
-    {% endfor %}
-
-    <div class="xs12 s6 m4 cta-cell">
-        <h3>{{ site.data.libraries.cta.title }}</h3>
-        <p>{{ site.data.libraries.cta.description }}</p>
-        <a href="{{ site.data.libraries.cta.link }}" tabindex="-1" target="_blank">
-            <paper-button raised filled>{{ site.data.libraries.cta.button }}</paper-button>
-        </a>
-    </div>
-
-</iron-grid>
+{% include collection.html info=site.data.libraries items= site.libraries %}
