Updated services formatting

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ permalink: /
     <section class="xs12 s6 m4">
         <iron-icon icon="{{ service.icon }}"></iron-icon>
         <h3>{{ service.title }}</h3>
-        <h6>{{ service.content }}</h6>
+        {{ service.content }}
     </section>
     {% endfor %}
 </iron-grid>
