Added permalinks and redirects

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 layout: default
 title: Heinrich Reimer
 permalink: /
+redirect_from:
+- /index/index.html
+- /index.html
+- /index.md
 ---
 
 {% include cover.html %}
