Improved contact form design

--- a/index.html
+++ b/index.html
@@ -31,87 +31,4 @@ permalink: /
 
 <hr>
 
-<form id="contact" name="contact" action="http://heinrichreimer.com/res/php/contact.php" method="post">
-    <iron-grid>
-
-        <h2 class="m12">Contact</h2>
-
-        <p class="m12">Get in touch with me.</p>
-
-        <paper-input
-                name="name"
-                id="contact_name"
-                class="xs12 s9 m7"
-                label="Name"
-                required
-                minlength="10"
-                maxlength="200"
-                type="text"
-                auto-validate
-                error-message="Please enter your name!"></paper-input>
-
-        <paper-input
-                name="email"
-                id="contact_email"
-                class="xs12 s9 m7"
-                label="Email"
-                required
-                minlength="10"
-                maxlength="500"
-                type="text"
-                auto-validate
-                pattern="[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?"
-                error-message="Not a valid email!"></paper-input>
-
-        <paper-input
-                name="subject"
-                id="contact_subject"
-                class="xs12 s9 m7"
-                label="Subject"
-                list="contact_subject_suggestions"
-                minlength="5"
-                maxlength="300"
-                type="text"
-                required
-                auto-validate
-                error-message="Please enter a subject!">
-
-            <datalist id="contact_subject_suggestions">
-                <option value="Development: Android">
-                <option value="Design: Android">
-                <option value="Consulting: Android">
-                <option value="Development: Website">
-                <option value="Design: Website">
-                <option value="Consulting: Website">
-            </datalist>
-
-        </paper-input>
-
-        <paper-textarea
-                name="message"
-                id="contact_message"
-                class="xs12 s12 m9"
-                label="Message"
-                required
-                minlength="10"
-                rows="3"
-                type="text"
-                auto-validate
-                error-message="Please enter a message!"></paper-textarea>
-
-        <re-captcha
-                class="xs12 s12 m9"
-                sitekey="6LenfOESAAAAAOXEwnOWBUm49toxM3JMDqy9QREX"
-                theme="dark"></re-captcha>
-
-        <button
-                name="submit"
-                class="xs12 s6 m4"
-                tabindex="-1"
-                data-finished="Sent">
-            <paper-button raised filled>Send</paper-button>
-        </button>
-
-    </iron-grid>
-</form>
-<paper-toast id="contact_snackbar" duration="4000"></paper-toast>
+{% include contact.html %}
