Link telephone and mail

--- a/content/imprint.html
+++ b/content/imprint.html
@@ -15,8 +15,8 @@ menu:
 
 <h2>Kontakt</h2>
 <p>
-    Telefon: +491749273954<br/>
-    E-Mail: mail@heinrichreimer.com
+    Telefon: <a href="tel:+491749273954">+49 174 9273954</a><br/>
+    E-Mail: <a href="mailto:mail@heinrichreimer.com">mail@heinrichreimer.com</a>
 </p>
 
 <h3>Haftung f&uuml;r Inhalte</h3>
