--- a/content/privacy.html
+++ b/content/privacy.html
@@ -104,8 +104,8 @@ menu:
 </p>
 
 <p>
-    Telefon: +491749273954<br/>
-    E-Mail: mail@heinrichreimer.com
+    Telefon: <a href="tel:+491749273954">+49 174 9273954</a><br/>
+    E-Mail: <a href="mailto:mail@heinrichreimer.com">mail@heinrichreimer.com</a>
 </p>
 <p>
     Verantwortliche Stelle ist die nat&uuml;rliche oder juristische Person, die allein oder gemeinsam mit anderen &uuml;ber
