--- a/content/imprint.html
+++ b/content/imprint.html
@@ -6,10 +6,10 @@ menu:
     name: Imprint
 ---
 
-<h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
+<h2>Angaben gemäß § 5 TMG</h2>
 <p>
     Jan Heinrich Reimer<br/>
-    Gro&szlig;e M&auml;rkerstra&szlig;e 20<br/>
+    Große Märkerstraße 20<br/>
     06108 Halle (Saale)
 </p>
 
@@ -19,26 +19,26 @@ menu:
     E-Mail: <a href="mailto:mail@heinrichreimer.com">mail@heinrichreimer.com</a>
 </p>
 
-<h3>Haftung f&uuml;r Inhalte</h3>
+<h3>Haftung für Inhalte</h3>
 <p>
-    Als Diensteanbieter sind wir gem&auml;&szlig; &sect; 7 Abs.1 TMG f&uuml;r eigene
-    Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach &sect;&sect; 8 bis 10 TMG sind wir als
-    Diensteanbieter jedoch nicht verpflichtet, &uuml;bermittelte oder gespeicherte fremde Informationen zu &uuml;berwachen
-    oder nach Umst&auml;nden zu forschen, die auf eine rechtswidrige T&auml;tigkeit hinweisen.
+    Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene
+    Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als
+    Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen
+    oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.
 </p>
 <p>
     Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben
-    hiervon unber&uuml;hrt.
-    Eine diesbez&uuml;gliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung m&ouml;glich.
+    hiervon unberührt.
+    Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich.
     Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
 </p>
 
-<h3>Haftung f&uuml;r Links</h3>
+<h3>Haftung für Links</h3>
 <p>
-    Unser Angebot enth&auml;lt Links zu externen Websites Dritter, auf deren Inhalte wir keinen
-    Einfluss haben. Deshalb k&ouml;nnen wir f&uuml;r diese fremden Inhalte auch keine Gew&auml;hr &uuml;bernehmen. F&uuml;r
+    Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen
+    Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für
     die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die
-    verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf m&ouml;gliche Rechtsverst&ouml;&szlig;e &uuml;berpr&uuml;ft.
+    verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft.
     Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.
 </p>
 <p>
@@ -51,9 +51,9 @@ menu:
 <p>
     Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht.
     Die
-    Vervielf&auml;ltigung, Bearbeitung, Verbreitung und jede Art der Verwertung au&szlig;erhalb der Grenzen des
-    Urheberrechtes bed&uuml;rfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und
-    Kopien dieser Seite sind nur f&uuml;r den privaten, nicht kommerziellen Gebrauch gestattet.
+    Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des
+    Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und
+    Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.
 </p>
 <p>
     Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet.
