--- a/content/imprint.html
+++ b/content/imprint.html
@@ -61,7 +61,27 @@ menu:
     aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir
     derartige Inhalte umgehend entfernen.
 </p>
-
 <p>
     Quelle: <a href="https://www.e-recht24.de">e-recht24</a>
+</p>
+
+<h2>CC0</h2>
+<p xmlns:dct="http://purl.org/dc/terms/" xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#">
+    <a rel="license" href="http://creativecommons.org/publicdomain/zero/1.0/">
+        <img src="https://img.shields.io/badge/License-CC0%201.0-lightgrey.svg" alt="CC0" />
+    </a><br />
+    To the extent possible under law,
+    <a rel="dct:publisher" href="https://heinrichreimer.com">
+        <span property="dct:title">
+            Jan Heinrich Reimer
+        </span>
+    </a>
+    has waived all copyright and related or neighboring rights to the
+    <span property="dct:title">
+        Jan Heinrich Reimer portfolio website
+    </span>.
+    This work is published from:
+    <span property="vcard:Country" datatype="dct:ISO3166" content="DE" about="https://heinrichreimer.com">
+        Germany
+    </span>.
 </p>
